--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ footer a:hover {
     color:white;
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1300px) and (min-width: 601px) {
     body{
         font-size: 20px;
     }
